objects/sf_devops__Repository__c.object
<CustomObject>
    <description>A repository represents an external version control system.</description>
    <fields>
        <fullName>sf_devops__Bitbucket_Project_Name__c</fullName>
        <description>This represents the  &apos;Bitbucket&apos; project name.</description>
        <label>Bitbucket Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Bitbucket_Repo_UUID__c</fullName>
        <description>This represents the  &apos;Bitbucket&apos; repository unique identifier.</description>
        <label>Bitbucket Repository UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Bitbucket_Workspace_UUID__c</fullName>
        <description>This represents the  &apos;Bitbucket&apos; workspace unique identifier.</description>
        <label>Bitbucket Workspace UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Default_Branch__c</fullName>
        <description>The name of the default branch in this repository.</description>
        <label>Default Branch</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__GitHub_Owner__c</fullName>
        <description>This field is no longer used and will be removed in a future release.</description>
        <label>GitHub Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__GitHub_Repo__c</fullName>
        <description>This field is no longer used and will be removed in a future release.</description>
        <label>GitHub Repo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Named_Credential__c</fullName>
        <description>This field is no longer used and will be removed in a future release.</description>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Path__c</fullName>
        <description>The path to this repository within the version control system</description>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Project_Generation_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The AOR referencing the project generation operation.</description>
        <label>Project Generation Operation Status</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Repositories</relationshipLabel>
        <relationshipName>Repositories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Url__c</fullName>
        <description>The full URL of this field</description>
        <label>Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf_devops__Vcs__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Version Control System this Repository resides in.</description>
        <label>Vcs</label>
        <referenceTo>sf_devops__Vcs__c</referenceTo>
        <relationshipLabel>Repositories</relationshipLabel>
        <relationshipName>Repositories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Repository</label>
    <listViews>
        <fullName>sf_devops__All</fullName>
        <columns>NAME</columns>
        <columns>sf_devops__Url__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sf_devops__GitHub_Properties</fullName>
        <active>false</active>
        <description>Deprecated.</description>
        <errorConditionFormula>False</errorConditionFormula>
        <errorMessage>Deprecated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__No_Property_Changes</fullName>
        <active>false</active>
        <description>Deprecated.</description>
        <errorConditionFormula>False</errorConditionFormula>
        <errorMessage>Deprecated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Require_GitHub_Properties</fullName>
        <active>false</active>
        <description>Deprecated.</description>
        <errorConditionFormula>False</errorConditionFormula>
        <errorMessage>Deprecated.</errorMessage>
    </validationRules>
</CustomObject>